fea-rs/test-data/compile-tests/mini-latin/bad/gsub_6_named_and_inline.fea
lookup HI {
    sub a by b;
} HI;

feature test {
    # cannot have explicit lookup as well as inline rule:
    sub a' lookup HI b' c by d;
} test;
